template.yml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  VpcName:
    Type: String
    Default: Shaijus-VPC-101
Resources:
  MyVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "192.168.0.0/16"
      Tags:
      - Key: Name
        Value: !Ref VpcName
  MySubnet1:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref MyVpc
      AvailabilityZone: us-east-1a
      CidrBlock: "192.168.0.0/24"
      MapPublicIpOnLaunch: true
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: true
      Tags:
      - Key: Name
        Value: Shaijus-Public-Subnet
  MySubnet2:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref MyVpc
      AvailabilityZone: us-east-1b
      CidrBlock: "192.168.1.0/24"
      MapPublicIpOnLaunch: false
      Tags:
      - Key: Name
        Value: Shaijus-Private-Subnet
  MyGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
      - Key: Name
        Value: Shaijus-Gateway
  MyGatewayVPCAttachment:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref MyVpc
      InternetGatewayId: !Ref MyGateway
  MyPublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref MyVpc
      Tags:
      - Key: Name
        Value: Shaijus-Publc-RT
  MyPublicRouteTableGatewayRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref MyPublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref MyGateway
  MyPublicSubnetRtAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref MyPublicRouteTable
      SubnetId: !Ref MySubnet1
  AllowSSHSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Allow SSH from anywhere
      VpcId: !Ref MyVpc
      Tags:
      - Key: Name
        Value: Shaijus-Allow-SSH-SG
  AllowSSHIngressRule:
    Type: "AWS::EC2::SecurityGroupIngress"
    Properties:
      GroupId: !Ref AllowSSHSecurityGroup
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: "0.0.0.0/0"
  MyEc2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-026b57f3c383c2eec
      InstanceType: t2.micro
      KeyName: my-key-pair
      NetworkInterfaces:
        - DeviceIndex: "0"
          AssociatePublicIpAddress: true
          GroupSet:
          - !GetAtt MyVpc.DefaultSecurityGroup
          - !Ref AllowSSHSecurityGroup
          SubnetId: !Ref MySubnet1
      Tags:
      - Key: Name
        Value: Shaijus-Instance
